--- a/src/components/Product/product.scss
+++ b/src/components/Product/product.scss
@@ -1,5 +1,4 @@
 .product{
-    width: 15%;
     color: white;
 
     &__title{
@@ -13,11 +12,13 @@
 
     &__image-container{
         width: 100%;
+        height: 350px;
+        padding-bottom: 10px;
         
         img{
-            width: 225px;
+            width: 100%;
             height: 350px;
-            border: 1px solid grey;
+            border: 4px solid white;
         }
     }
 
